# coldstore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  archive_project.py  pyproject.toml  test-before-push.sh  test_archive_project.py
.dev/: RELEASE_CHECKLIST.md
.dev/docs/: IMPLEMENTATION_PLAN.md  phase1-issues-draft.md
.github/workflows/: ci.yml  release.yml
archive_project/: __init__.py  __main__.py
archive_project/cli/: __init__.py  main.py
archive_project/core/: __init__.py  archiver.py  metadata.py
archive_project/storage/: __init__.py  rclone.py
archive_project/utils/: __init__.py  file_ops.py  formatters.py
coldstore/: __init__.py  __main__.py
coldstore/cli/: app.py  main.py
coldstore/core/: archive.py  archiver.py  checksums.py  collectors.py  manifest.py  metadata.py  scanner.py  splitter.py  verifier.py
coldstore/metadata/: __init__.py  environment.py  git.py  system.py
coldstore/storage/: rclone.py
coldstore/utils/: file_ops.py  formatters.py  preview.py  progress.py
docs/: CLAUDE.md  IMPLEMENTATION_PLAN.md  PRODUCT_VISION.md  USAGE.md  analysis_notices_synergies.md  gpt_feedback_highlevel.md  gpt_proposal_1.md  gpt_proposal_2.md  implementation-plan.md  improvement-analysis.md  priority-summary.md  technical-decisions.md
tests/: README.md  __init__.py  conftest.py  test_archiver.py  test_cli.py  test_cli_v2.py  test_collectors.py  test_core.py  test_dry_run.py  test_edge_cases.py  test_inspector.py  test_manifest.py  test_manifest_strengthened.py  test_scanner.py  test_scanner_strengthened.py  test_splitting.py  test_utils.py  test_verifier.py
