[tool.poetry]
name = "coldstore"
version = "0.1.0"
description = "Cold storage archiving utility for long-term preservation with metadata"
authors = ["janfasnacht <jan.fasnacht@gmail.com>"]
readme = "README.md"
packages = [{include = "archive_project"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coldstore = "archive_project.cli.main:main"