[tool.poetry]
name = "coldstore"
version = "0.1.0"
description = "Cold storage archiving utility for long-term preservation with metadata"
authors = ["janfasnacht <jan.fasnacht@gmail.com>"]
readme = "README.md"
packages = [{include = "archive_project"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coldstore = "archive_project.cli.main:main"

# Development scripts
test = "pytest"
test-cov = "pytest --cov=archive_project --cov-report=html --cov-report=term-missing"
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C90", "RUF"]

[tool.ruff.per-file-ignores]
"tests/*" = ["N802", "N803"]  # Allow non-lowercase function names in tests