[tool.poetry]
name = "coldstore"
version = "2.0.0-dev"
description = "Event-driven project archival system with comprehensive metadata and verification"
authors = ["janfasnacht <jan.fasnacht@gmail.com>"]
readme = "README.md"
packages = [{include = "coldstore"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
typer = "^0.9.0"
pyyaml = "^6.0"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coldstore = "coldstore.cli.app:app"


[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C90", "RUF"]

[tool.ruff.per-file-ignores]
"tests/*" = ["N802", "N803"]  # Allow non-lowercase function names in tests